# parse-monitors

./: .gitignore  Cargo.toml  README.md  REPORT.md
asm/: Cargo.toml
asm/examples/: asm-es_geom.rs  pressure-stats.rs  pressure-stats_geometry.rs  temperature-stats_geometry.rs
asm/src/: lib.rs  main.rs  pressure.rs  refraction_index.rs
cfd-youtube/: Cargo.toml
cfd-youtube/src/: main.rs
cfd2youtube/: Cargo.toml
cfd2youtube/src/: main.rs
cfd_report/: Cargo.toml
cfd_report/src/: batch_force.rs  dome_seeing.rs  error.rs  lib.rs  main.rs  opd_maps.rs  pressure_maps.rs  report.rs
domeseeing/: Cargo.toml  README.md
domeseeing/src/: main.rs
examples/: arms.rs  pressure.rs  pressure_table.rs
examples/gir/: gir.ipynb  main.rs
gmacs/: Cargo.toml
htc-analysis/: Cargo.toml
htc-analysis/src/: main.rs
m1-dyn-pressure/: Cargo.toml
m1-dyn-pressure/src/: main.rs
pressure-lambda/: Cargo.toml  Makefile
pressure-lambda/examples/: collect_data.rs
psf/: CLAUDE.md  Cargo.toml
psf/src/: config.rs  lib.rs  main.rs  psfs.rs
psf/src/psfs/: psf.rs
report/: gmto-book.cls  gmto.cfd2021.mount.detrend.tex  gmto.cfd2021.mount.tex  gmto.cfd2021.redo.tex  gmto.cfd2021.tex  gmto.cls  introduction.tex  mount.bib  mount.detrend.chapter.tex  mount.introduction.tex  thbound2.chapter.tex  thbound2.tex
src/: cfd.rs  domeseeing.rs  error.rs  lib.rs  main.rs  mirror.rs  monitors.rs  pressure.rs  py2rs.py  temperature.rs  vector.rs
src/cfd/: baseline.rs  cfd_case.rs  y2020.rs  y2021.rs  y2025.rs
src/monitors/: mirror.rs  mod.rs  reports.rs
src/monitors/reports/: loader.rs
src/monitors/reports/loader/: 2021_25.rs  y2020.rs  y2021_25.rs
src/pressure/:  markdown-code-fontification:rustic-mode  mirrors.rs  mod.rs  telescope.rs
src/report/: domeseeing.rs  htc.rs  mod.rs  windloads.rs
windloads/: Cargo.toml
windloads/src/: main.rs
