[package]
name = "parse-monitors"
version = "0.2.3"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2021"
license = "MIT"
description = "Giant Magellan Telescope Computation Fluid Dynamics Parser"
repository = "https://github.com/rconan/parse-monitors"
documentation = "https://docs.rs/parse-monitors"
readme = "README.md"
categories = ["science", "simulation"]
keywords = ["telescope", "astronomy"]
default-run = "main"

[workspace]
members = ["gmacs","htc-analysis"]


[workspace.dependencies]
rayon = "1.5.1"
serde-pickle = "1.1.0"
polars = { version = "0.18.0", features = ["decompress"] }
rstar = { version = "0.9.2" }
indicatif = { version = "0.17.2", features = ["rayon"] }
serde = { version = "1.0.126", features = ["derive"] }
anyhow = "1.0.51"

[dependencies]
bzip2 = { version = "0.4.3", optional = true }
colorous = "1.0.6"
csv = "1.1.6"
indicatif = { version = "0.17.3", features = ["rayon"] }
nalgebra = { version = "0.32.1", features = ["rand"] }
plotters = { version = "0.3.1", optional = true }
regex = "1.5.4"
serde = { version = "1.0.160", features = ["derive"] }
structopt = "0.3.21"
glob = "0.3.0"
log = "0.4.17"
env_logger = "0.9.0"
rayon = "1.6.1"
tectonic = { version = "0.8.0", optional = true }
chrono = "0.4.19"
strum = "0.22.0"
strum_macros = "0.22.0"
triangle-rs = { version = "0.*" }
polars = { version = "0.18.0", features = ["decompress"], optional = true }
thiserror = "1.0.36"
geotrans = { version = "^0.2.0" }
anyhow = "1.0.68"
npyz = { version = "0.8.1", features = ["npz"] }
flate2 = "1.0.22"
itertools = "0.10.3"
welch-sde = "0.1.0"
rstar = { workspace = true, optional = true }
complot = { version = "0.3.3", optional = true }
linya = "0.3.0"
lom = { version = "2.0.0", package = "gmt-lom", features = ["apache"] }
matio-rs = { version = "1.3.1", optional = true }
serde-pickle.workspace = true

[features]
plot = ["plotters", "complot"]
xcase = []
b2020 = []

[[bin]]
name = "batch_force"
required-features = ["plot"]

[[bin]]
name = "group-force"
required-features = ["plot"]

[[bin]]
name = "opd_maps"
required-features = ["plot"]

[[bin]]
name = "dome-seeing"
required-features = ["plot"]

[[bin]]
name = "pressure-stats_plots"
required-features = ["polars"]

[[bin]]
name = "asm_temperature-stats_plots"
required-features = ["polars"]

[[bin]]
name = "asm_pressure-stats_plots"
required-features = ["polars"]

[[bin]]
name = "integral_pressures"
required-features = ["polars"]

[[bin]]
name = "cfd_special_report"
required-features = ["tectonic"]

[[bin]]
name = "asm_differential_pressure"
required-features = ["matio-rs"]

[dev-dependencies]
polars = "0.18.0"
rand = "0.8.4"

[package.metadata.docs.rs]
features = ["plot", "rstar"]
