[package]
name = "parse-monitors"
version = "0.3.2"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2021"
license = "MIT"
description = "Giant Magellan Telescope Computation Fluid Dynamics Parser"
repository = "https://github.com/rconan/parse-monitors"
documentation = "https://docs.rs/parse-monitors"
readme = "README.md"
categories = ["science", "simulation"]
keywords = ["telescope", "astronomy"]
default-run = "parse-monitors"

[workspace]
members = ["domeseeing", "gmacs", "htc-analysis", "cfd-youtube", "cfd_report", "windloads", "psf"]


[workspace.dependencies]
rayon = "1.10.0"
serde-pickle = "1.2.0"
polars = { version = "0.47.1", features = ["decompress"] }
rstar = { version = "0.12.2" }
indicatif = { version = "0.17.11", features = ["rayon"] }
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
glob = "0.3.2"
npyz = { version = "0.8.1", features = ["npz"] }
complot = { version = "0.3.3" }
geotrans = { version = "^0.2.0" }
crseo = "2.5.1"
gmt_dos-clients_domeseeing = {version = "3.0", features = ["npyz"], default-features = false}

[dependencies]
bzip2 = { version = "0.5.2", optional = true }
colorous = "1.0.16"
csv = "1.3.1"
indicatif.workspace = true
nalgebra = { version = "0.32.1", features = ["rand"] }
plotters = { version = "0.3.1", optional = true }
regex = "1.5.4"
serde.workspace = true
structopt = "0.3.21"
rayon.workspace = true
tectonic = { version = "0.8.0", optional = true }
strum = "0.27.1"
strum_macros = "0.27.1"
triangle-rs = { version = "0.*" }
polars = { workspace = true, optional = true }
thiserror = "2.0"
anyhow.workspace = true
flate2 = "1.1.1"
itertools = "0.14.0"
welch-sde = "0.1.0"
rstar = { workspace = true, optional = true }
linya = "0.3.0"
lom = { version = "2.4.2", package = "gmt-lom", features = ["apache"] }
matio-rs = { version = "1.3.1", optional = true }
serde-pickle.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
glob.workspace = true
npyz.workspace = true
complot = { workspace = true, optional = true }
geotrans.workspace = true

[features]
default = ["2025"]
plot = ["plotters", "complot"]
xcase = []
b2020 = []
dosio = []
windloading = []
2020 = []
2021 = []
2025 = []

[[bin]]
name = "batch_force"
required-features = ["plot"]

[[bin]]
name = "group-force"
required-features = ["plot"]

[[bin]]
name = "opd_maps"
required-features = ["plot"]

[[bin]]
name = "dome-seeing"
required-features = ["plot"]

[[bin]]
name = "pressure-stats_plots"
required-features = ["polars"]

[[bin]]
name = "asm_temperature-stats_plots"
required-features = ["polars"]

[[bin]]
name = "asm_pressure-stats_plots"
required-features = ["polars"]

[[bin]]
name = "integral_pressures"
required-features = ["polars"]

[[bin]]
name = "cfd_special_report"
required-features = ["tectonic"]

[[bin]]
name = "asm_differential_pressure"
required-features = ["matio-rs"]

[[bin]]
name = "parse-monitors"
path = "src/bin/main.rs"
required-features = ["plot"]

[dev-dependencies]
polars = "0.18.0"
rand = "0.8.4"

[package.metadata.docs.rs]
features = ["plot", "rstar"]
