[package]
name = "asm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
bzip2 = "0.4.3"
glob = "0.3.0"
parse-monitors = { path = ".." }
polars = { version = "0.18.0", features = ["decompress"] }
rayon = "1.5.1"
