[package]
name = "gmacs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon.workspace = true
serde-pickle.workspace = true
polars.workspace = true
serde.workspace = true
rstar.workspace = true
indicatif.workspace = true
parse-monitors = { version = "0.2.2", path = "..", features = ["rstar"] }
anyhow.workspace = true
