[package]
name = "psf"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
crseo.workspace = true
env_logger.workspace = true
gmt_dos-clients_domeseeing.workspace = true 
parse-monitors = { version = "0.3.1", path = ".." }
serde-pickle.workspace = true
image = "0.24"
colorous = "1.0"
indicatif.workspace = true
clap.workspace = true
